# grevm

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  rust-toolchain.toml  use-with-reth.md
.github/workflows/: grevm-ethereum.yml  grevm-fmt.yml  grevm-test.yml
benches/: gigagas.rs  mainnet.rs
crates/blockchain-tree/src/: chain.rs
crates/consensus/auto-seal/src/: lib.rs
crates/ethereum/evm/: Cargo.toml
crates/ethereum/evm/src/: execute.rs  lib.rs  parallel_execute.rs
crates/evm/src/: either.rs  execute.rs  noop.rs  test_utils.rs
crates/grevm/: Cargo.toml
crates/grevm/benches/: gigagas.rs
crates/grevm/src/: grevm_test.rs  hint.rs  lib.rs  partition.rs  scheduler.rs  storage.rs  tx_dependency.rs
crates/grevm/tests/: native_transfers.rs
crates/grevm/tests/common/: execute.rs  mod.rs  storage.rs
crates/grevm/tests/erc20/: contract.rs  erc20_contract.rs  main.rs  mod.rs
crates/grevm/tests/ethereum/: README.md  main.rs
crates/grevm/tests/uniswap/: contract.rs  main.rs  mod.rs
src/: hint.rs  lib.rs  partition.rs  scheduler.rs  storage.rs  tx_dependency.rs
tests/: mainnet.rs  native_transfers.rs
tests/common/: compat.rs  execute.rs  mod.rs  storage.rs
tests/erc20/: erc20_contract.rs  main.rs  mod.rs
tests/ethereum/: main.rs
tests/uniswap/: contract.rs  main.rs  mod.rs
