[package]
name = "grevm"
version = "0.1.0"
edition = "2021"
description = "Create Parallel EVM"

[dependencies]
revm = "14.0.3"
fastrace = "0.7"

# Alloy
alloy-chains = "0.1.38"

# async
tokio = { version = "1.39", features = ["sync", "macros", "time", "rt-multi-thread"] }
futures = "0.3"
rand = "0.8.5"
auto_impl = "1"
lazy_static = "1.5.0"
dashmap = "6.0"

# metrics
metrics = "0.23.0"

# small vector
smallvec = "1"

[dev-dependencies]
serde_json = "1.0.128"
criterion = "0.5.1"
metrics-util = "0.17.0"
walkdir = "2.5.0"
rayon = "1.10.0"
revme = "0.10.3"
fastrace = { version = "0.7", features = ["enable"] }
fastrace-jaeger = "0.7"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"

[[bench]]
name = "gigagas"
harness = false

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
