[package]
name = "grevm"
version = "0.1.0"
edition = "2021"
description = "Create Parallel EVM"
build = "build.rs"

[dependencies]
revm = { package = "revm", git = "https://github.com/galxe/revm", rev = "20b5883" }
revm-primitives = { package = "revm-primitives", git = "https://github.com/galxe/revm", rev = "20b5883" }
fastrace = "0.7"
tracing = "0.1.40"
ahash = { version = "0.8.11", features = ["serde"] }
rayon = "1.10.0"
atomic = "0.6.0"

# Alloy
alloy-chains = "0.1.18"

# async
tokio = { version = "1.39", features = ["sync", "macros", "time", "rt-multi-thread"] }
futures = "0.3"
rand = "0.8.5"
auto_impl = "1"
lazy_static = "1.5.0"
dashmap = "6.0"

# metrics
metrics = "0.23.0"

# small vector
smallvec = "1"

[dev-dependencies]
criterion = "0.5.1"
metrics-util = "0.17.0"
walkdir = "2.5.0"
rayon = "1.10.0"
revme = { package = "revme", git = "https://github.com/galxe/revm", rev = "20b5883" }
fastrace = { version = "0.7", features = ["enable"] }
fastrace-jaeger = "0.7"
tikv-jemallocator = "0.5.0"
bincode = "1.3.3"
serde_json = "1.0.94"

[lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"

[[bench]]
name = "gigagas"
harness = false

[[bench]]
name = "mainnet"
harness = false

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"

[features]
update-test-submodule = ["update-submodule-test-data", "update-submodule-ethereum-tests"]
update-submodule-test-data = []
update-submodule-ethereum-tests = []
