[package]
name = "reth-grevm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Parallel EVM"

[lints]
workspace = true

[dependencies]
# Reth
reth-chainspec.workspace = true
reth-ethereum-forks.workspace = true
reth-evm.workspace = true
reth-primitives = { workspace = true, features = ["reth-codec"] }
reth-revm.workspace = true
reth-ethereum-consensus.workspace = true
reth-prune-types.workspace = true
reth-execution-types.workspace = true
fastrace = "0.7"

# Ethereum
revm-primitives.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-sol-types.workspace = true

# async
tokio = { workspace = true, features = ["sync", "macros", "time", "rt-multi-thread"] }
futures = { workspace = true }
rand = { workspace = true }
auto_impl = { workspace = true }
lazy_static = "1.5.0"
dashmap.workspace = true

# metrics
metrics.workspace = true

# small vector
smallvec.workspace = true

[dev-dependencies]
reth-testing-utils.workspace = true
reth-revm = { workspace = true, features = ["test-utils"] }
reth-primitives = { workspace = true, features = ["secp256k1"] }
secp256k1.workspace = true
serde_json.workspace = true
criterion.workspace = true
metrics-util.workspace = true
walkdir = "2.5.0"
rayon = "1.10.0"
revme = "0.10.0"
fastrace = { version = "0.7", features = ["enable"] }
fastrace-jaeger = "0.7"

[[bench]]
name = "gigagas"
harness = false

[features]
default = ["std"]
std = []